localization/v2.4.x/site/id/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: >-
  Halaman ini menyediakan daftar tutorial bagi Anda untuk berinteraksi dengan
  Milvus.
title: Ikhtisar Tutorial
---
<h1 id="Tutorials-Overview" class="common-anchor-header">Ikhtisar Tutorial<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>Halaman ini menyediakan daftar tutorial bagi Anda untuk berinteraksi dengan Milvus.</p>
<table>
<thead>
<tr><th>Tutorial</th><th>Kasus Penggunaan</th><th>Fitur-fitur terkait Milvus</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/id/v2.4.x/build-rag-with-milvus.md">Membangun RAG dengan Milvus</a></td><td>RAG</td><td>Pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/how_to_enhance_your_rag.md">RAG tingkat lanjut</a></td><td>RAG</td><td>Pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/full_text_search_with_milvus.md">Pencarian Teks Lengkap dengan Milvus</a></td><td>Mulai Cepat</td><td>Pencarian Teks Lengkap</td></tr>
<tr><td><a href="/docs/id/v2.4.x/hybrid_search_with_milvus.md">Pencarian Hibrida dengan Milvus</a></td><td>Pencarian Hibrida</td><td>pencarian hibrida, multi vektor, penyematan padat, penyematan jarang</td></tr>
<tr><td><a href="/docs/id/v2.4.x/image_similarity_search.md">Pencarian Gambar dengan Milvus</a></td><td>Pencarian Semantik</td><td>pencarian vektor, bidang dinamis</td></tr>
<tr><td><a href="/docs/id/v2.4.x/multimodal_rag_with_milvus.md">RAG multimodal dengan Milvus</a></td><td>RAG</td><td>pencarian vektor, bidang dinamis</td></tr>
<tr><td><a href="/docs/id/v2.4.x/multimodal_rag_with_milvus.md">Pencarian Multimodal menggunakan Multi Vektor</a></td><td>Pencarian Semantik</td><td>multi vektor, pencarian hibrida</td></tr>
<tr><td><a href="/docs/id/v2.4.x/graph_rag_with_milvus.md">Grafik RAG dengan Milvus</a></td><td>RAG</td><td>pencarian grafik</td></tr>
<tr><td><a href="/docs/id/v2.4.x/contextual_retrieval_with_milvus.md">Pencarian Kontekstual dengan Milvus</a></td><td>Memulai dengan cepat</td><td>Pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/hdbscan_clustering_with_milvus.md">Pengelompokan HDBSCAN dengan Milvus</a></td><td>Mulai cepat</td><td>pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/use_ColPali_with_milvus.md">Gunakan ColPali untuk Pencarian Multi-Modal dengan Milvus</a></td><td>Mulai Cepat</td><td>pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/vector_visualization.md">Visualisasi Vektor</a></td><td>Mulai Cepat</td><td>pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/movie_recommendation_with_milvus.md">Rekomendasi Film dengan Milvus</a></td><td>Sistem Rekomendasi</td><td>pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/funnel_search_with_matryoshka.md">Pencarian Corong dengan Penyematan Matryoshka</a></td><td>Mulai cepat</td><td>Pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/question_answering_system.md">Sistem Penjawaban Pertanyaan</a></td><td>Menjawab Pertanyaan</td><td>Pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/recommendation_system.md">Sistem Rekomendasi</a></td><td>Sistem Rekomendasi</td><td>Pencarian Vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/video_similarity_search.md">Pencarian Kemiripan Video</a></td><td>Pencarian Semantik</td><td>Pencarian Vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/audio_similarity_search.md">Pencarian Kemiripan Audio</a></td><td>Pencarian Semantik</td><td>pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/dna_sequence_classification.md">Klasifikasi DNA</a></td><td>Klasifikasi</td><td>pencarian vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/text_search_engine.md">Mesin Pencari Teks</a></td><td>Pencarian Semantik</td><td>Pencarian Vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/text_image_search.md">Cari Gambar dengan Teks</a></td><td>Pencarian Semantik</td><td>Pencarian Vektor</td></tr>
<tr><td><a href="/docs/id/v2.4.x/image_deduplication_system.md">Deduplikasi Gambar</a></td><td>Deduplikasi</td><td>pencarian vektor</td></tr>
</tbody>
</table>
